objects/ScCollection_Bucket_Summary__c.object
<CustomObject>
    <description>this object would contain the status of contracts bucket on daily basis</description>
    <fields>
        <fullName>ScCollecction_Diff_Percent__c</fullName>
        <formula>ScCollection_Percent__c - ScCollection_EOM_percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_BucketName__c</fullName>
        <description>this field would contain the bucket name</description>
        <label>Bucket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract_Summary__c</fullName>
        <description>this field would tag the contract summary to bucket summary</description>
        <label>Contract Summary</label>
        <referenceTo>ScCollection_Contract_Summary__c</referenceTo>
        <relationshipLabel>Bucket Summary</relationshipLabel>
        <relationshipName>Bucket_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScCollection_Count_of_Contracts__c</fullName>
        <description>this field would contain the number of contracts in that contract</description>
        <label>Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Count_of_Month_End_Accounts__c</fullName>
        <formula>ScCollection_Month_s_End_Bucket_Summary__r.ScCollection_Count_of_Contracts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EOM Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Current_Balance_Sum__c</fullName>
        <description>this field would contain the sum of balances of that bucket</description>
        <label>Balances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_DifferenceCount__c</fullName>
        <formula>ScCollection_Count_of_Contracts__c - ScCollection_Month_s_End_Bucket_Summary__r.ScCollection_Count_of_Contracts__c</formula>
        <label>Difference in Accounts Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Difference__c</fullName>
        <formula>ScCollection_Current_Balance_Sum__c-ScCollection_Month_s_End_Bucket_Summary__r.ScCollection_Current_Balance_Sum__c</formula>
        <label>Difference in Balances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_EOM_Balances__c</fullName>
        <formula>ScCollection_Month_s_End_Bucket_Summary__r.ScCollection_Current_Balance_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EOM Balances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_EOM_percent__c</fullName>
        <formula>ScCollection_Month_s_End_Bucket_Summary__r.ScCollection_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month End&apos;s Balances %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Month_s_End_Bucket_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field would contain the month&apos;s end bucket summary</description>
        <label>Month&apos;s End Bucket Summary</label>
        <referenceTo>ScCollection_Bucket_Summary__c</referenceTo>
        <relationshipLabel>Bucket Summary (Month&apos;s End Bucket Summary)</relationshipLabel>
        <relationshipName>Bucket_Summary1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Number_of_Contracts_Moved__c</fullName>
        <description>this field would contain the total number of moved contracts from one to two</description>
        <label>Number of Contracts Moved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Percent__c</fullName>
        <formula>if(ScCollection_Contract_Summary__r.ScCollection_Total_Balance_Today__c = 0,0,ScCollection_Current_Balance_Sum__c /  ScCollection_Contract_Summary__r.ScCollection_Total_Balance_Today__c)</formula>
        <label>Today&apos;s Balances %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_SumofContractsMovedfrom1to2__c</fullName>
        <description>this field would contain the sum of moved contracts from one to two</description>
        <label>Sum of Contracts Moved from 1 to 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Yesterday_Bucket_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>would tag yesterday&apos;s bucket to today&apos;s bucket</description>
        <label>Yesterday Bucket Summary</label>
        <referenceTo>ScCollection_Bucket_Summary__c</referenceTo>
        <relationshipLabel>Bucket Summary</relationshipLabel>
        <relationshipName>Bucket_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bucket Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Bucket Summary- {0000000}</displayFormat>
        <label>Bucket Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bucket Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>